<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CarActivity" >

    <TextView
        android:id="@+id/textCarManufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_manufacturer" />

    <TextView
        android:id="@+id/textInputCarManufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textCarManufacturer"
        android:layout_below="@+id/textCarManufacturer"
        android:text="" />

    <TextView
        android:id="@+id/textCarModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textInputCarManufacturer"
        android:layout_below="@+id/textInputCarManufacturer"
        android:text="@string/text_model" />

    <TextView
        android:id="@+id/textInputCarModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textCarModel"
        android:layout_below="@+id/textCarModel"
        android:text="" />

    <TextView
        android:id="@+id/textCarEngineSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textInputCarModel"
        android:layout_below="@+id/textInputCarModel"
        android:text="@string/text_engine_size" />

    <TextView
        android:id="@+id/textInputCarEngineSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textCarEngineSize"
        android:layout_below="@+id/textCarEngineSize"
        android:text="" />

    <TextView
        android:id="@+id/textCarPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textInputCarEngineSize"
        android:layout_below="@+id/textInputCarEngineSize"
        android:text="@string/text_power" />

    <TextView
        android:id="@+id/textInputCarPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textCarPower"
        android:layout_below="@+id/textCarPower"
        android:text="" />

    <TextView
        android:id="@+id/textCarVintage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textInputCarPower"
        android:layout_below="@+id/textInputCarPower"
        android:text="@string/text_vintage" />

    <TextView
        android:id="@+id/textInputCarVintage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textCarVintage"
        android:layout_below="@+id/textCarVintage"
        android:text="" />

</RelativeLayout>